# libv4l-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: capture_controls.rs  capture_device.rs  capture_frameintervals.rs  capture_framesizes.rs  context.rs  controls.rs  device.rs  device_output.rs  formats.rs  forward_frame.rs  forward_video.rs  frameintervals.rs  framesizes.rs  framesizes_capture.rs  glium.rs  io_capture.rs  list.rs  mini_fb.rs  mmap.rs  mutiplanar_stream_capture_mmap.rs  output_controls.rs  output_device.rs  output_frameintervals.rs  output_framesizes.rs  stream_capture_mmap.rs  stream_capture_mplane_mmap.rs  stream_capture_userptr.rs  stream_forward_mmap.rs  userptr.rs
src/: buffer.rs  capability.rs  colorspace.rs  context.rs  control.rs  device.rs  field.rs  fieldorder.rs  format.rs  fourcc.rs  fraction.rs  frameinterval.rs  framesize.rs  ioctl.rs  lib.rs  memory.rs  parameters.rs  pselect.rs  quantization.rs  timestamp.rs  v4l2.rs
src/buffers/: host.rs  mmap.rs  mmap_manager.rs  mmap_stream.rs  mod.rs  userptr.rs  userptr_manager.rs  userptr_stream.rs
src/capture/: device.rs  format.rs  mod.rs  parameters.rs
src/device/: capture.rs  capture_format.rs  capture_parameters.rs  info.rs  mod.rs
src/format/: description.rs  fourcc.rs  mod.rs  quantization.rs  transfer.rs
src/io/: arena.rs  mod.rs  stream.rs  traits.rs
src/io/mmap/: arena.rs  buffer.rs  mod.rs  mplane_stream.rs  stream.rs
src/io/userptr/: arena.rs  buffer.rs  mod.rs  stream.rs
src/output/: device.rs  mod.rs  parameters.rs
src/v4l2/: api.rs  mod.rs  videodev.rs  vidioc.rs
src/video/: macros.rs  mod.rs  traits.rs
src/video/capture/: mod.rs  mplane.rs  parameters.rs
src/video/mplane_capture/: mod.rs
src/video/output/: mod.rs  parameters.rs
v4l-sys/: Cargo.toml  build.rs  wrapper.h
v4l-sys/src/: lib.rs
v4l2-sys/: Cargo.toml  build.rs  wrapper.h
v4l2-sys/src/: lib.rs
v4l2-tokio/: Cargo.toml
