[package]
name = "v4l"
description = "Safe video4linux (v4l) bindings"
version = "0.2.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/libv4l-rs"

[dependencies]
libc = "0.2"
v4l-sys = { path = "v4l-sys", version = "0.1.0", optional = true }

[dev-dependencies]
clap = "^2.33.0"

[features]
default = ["system"]
system = ["v4l-sys"]

[workspaces]
members = [
    "v4l-sys",
]
