[package]
name = "v4l"
description = "Safe video4linux (v4l) bindings"
version = "0.14.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/libv4l-rs"

[dependencies]
bitflags = "2"
libc = "0.2"
v4l-sys = { path = "v4l-sys", version = "0.3.0", optional = true }
v4l2-sys = { path = "v4l2-sys", version = "0.3.0", package="v4l2-sys-mit", optional = true }

[dev-dependencies]
glium = "0.27.0"
jpeg-decoder = "0.2.1"

[features]
default = ["v4l2"]
libv4l = ["v4l-sys"]
v4l2 = ["v4l2-sys"]

[workspace]
members = [
    "v4l-sys",
    "v4l2-sys",
]
