[package]
name = "v4l"
description = "Safe video4linux (v4l) bindings"
version = "0.14.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/libv4l-rs"

[dependencies]
bitflags = "2"
libc = "0.2"
v4l-sys = { path = "v4l-sys", version = "0.3.0", optional = true }
v4l2-sys = { path = "v4l2-sys", version = "0.3.0", package="v4l2-sys-mit", optional = true }

[dev-dependencies]
glium = "0.27.0"
jpeg-decoder = "0.3.0"

[features]
default = ["v4l2", "runtime"]
libv4l = ["v4l-sys"]
v4l2 = ["v4l2-sys"]
runtime = ["v4l-sys?/runtime", "v4l2-sys?/runtime"]
static = ["v4l-sys?/static", "v4l2-sys?/static"]

[workspace]
members = [
    "v4l-sys",
    "v4l2-sys",
]
