[package]
name = "v4l2-sys-mit"
description = "Raw v4l2 bindings (MIT licensed)"
version = "0.3.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
build = "build.rs"

[build-dependencies]
bindgen = { git = "https://github.com/callum-hopkins-dev/rust-bindgen.git", rev = "d353b4889e446ee37347f8e19de985c1e24761b5", default-features = false }

[features]
runtime = ["bindgen/runtime"]
static = ["bindgen/static"]
